# command

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  build.sh  main.cpp  meson.build
.github/workflows/: build.yml
data/: meson.build  org.aether.command.desktop.in  org.aether.command.gresource.xml  org.aether.command.metainfo.xml.in  window.ui
debian/: changelog  control  copyright
img/: .gitkeep
packaging/: PKGBUILD  aether-command.spec
packaging/apg/: metadata.json
src/: main.vala  terminal.vala  window.vala
